--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>김예은 | Tech & Security Portfolio</title>
+  <title>김예은 | Interactive Developer Portfolio</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
     <h1>김예은</h1>
-    <p>IT학부 개발 & 보안 포트폴리오</p>
+    <p>IT학부 | Interactive Developer Portfolio</p>
     <nav>
       <a href="index.html">Home</a>
       <a href="code.html">Code</a>
@@ -17,18 +17,20 @@
 
   <main>
     <section class="intro">
-      <h2>개발과 보안을 함께 배우는 개발자</h2>
+      <h2>코드를 체험하는 포트폴리오</h2>
       <p>
         안녕하세요, IT학부 김예은입니다.<br>
-        한 학기 동안 배운 C, HTML, CSS, JavaScript를 정리하고<br>
-        개발자로서의 성장과 보안 인식을 함께 보여주는 포트폴리오입니다.
+        이 웹사이트는 제가 배운 언어(C, HTML, CSS, JavaScript)를<br>
+        직접 실행하고 체험할 수 있도록 만든 포트폴리오입니다.<br>
+        단순히 결과를 보여주는 것이 아니라, <b>직접 눌러보고 느끼는 코드</b>를 목표로 했습니다.
       </p>
-      <a href="code.html" class="btn">코드 포트폴리오 보기 ▶</a>
+      <a href="code.html" class="btn">체험 시작 ▶</a>
     </section>
   </main>
 
   <footer>
-    <p>© 2025 Kim Yeeun | Tech & Security Portfolio</p>
+    <p>© 2025 Kim Yeeun | Interactive Developer Portfolio</p>
   </footer>
 </body>
 </html>
+
