--- a/code.html
+++ b/code.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Interactive Code Portfolio</title>
   <link rel="stylesheet" href="style.css">
+  <script defer src="js"></script>
 </head>
 <body>
   <header>
@@ -65,4 +66,5 @@ int main()
   </main>
 </body>
 </html>
+
 
