Update script source in HTML file

--- a/code.html
+++ b/code.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Interactive Code Portfolio</title>
   <link rel="stylesheet" href="style.css">
-  <script defer src="js"></script>
+  <script defer src="script.js"></script>
 </head>
 <body>
   <header>
@@ -66,5 +66,6 @@ int main()
   </main>
 </body>
 </html>
+
 
 
