--- a/index.html
+++ b/index.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>김예은 | Interactive Developer Portfolio</title>
+  <title>김예은 | 웹프로그래밍 중간/기말고사 </title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
     <h1>김예은</h1>
-    <p>IT학부 | Interactive Developer Portfolio</p>
+    <p>IT학부 | 웹프로그래밍 중간/기말고사
+    </p>
     <nav>
+      <!-- 소개 -->
       <a href="index.html">Home</a>
+      <!-- 미리보기 코드 -->
       <a href="code.html">Code</a>
+      <!-- 내가 그동안 공부한 코드 모음집(?) -->
+      <a href="portfolio.html">Portfolio</a>
+      <!-- 체험판 -->
+      <a href="playground.html">Playground</a>
     </nav>
   </header>
 
@@ -27,7 +34,5 @@
       <a href="code.html" class="btn">체험 시작 ▶</a>
     </section>
   </main>
-  
 </body>
 </html>
-
