--- a/code.html
+++ b/code.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
   <meta charset="UTF-8">
   <title>Code Overview | 김예은</title>
   <link rel="stylesheet" href="style.css">
   <script defer src="script.js"></script>
 </head>
+
 <body>
   <header>
     <h1>배운 언어 소개</h1>
@@ -43,12 +45,15 @@ int main() {
       <p>웹페이지의 구조를 만드는 마크업 언어임. 다양한 태그로 콘텐츠를 구성할 수 있음.</p>
       <pre><code>&lt;h1&gt;안녕하세요&lt;/h1&gt;
 &lt;p&gt;이것은 단락입니다.&lt;/p&gt;
-&lt;a href="#"&gt;링크&lt;/a&gt;
+&lt;a href="#"&gt;antifreeze - 백예린&lt;/a&gt;
       </code></pre>
       <div class="preview-box">
         <h3>안녕하세요</h3>
         <p>이것은 단락입니다.</p>
-        <a href="#">링크</a>
+        <a href="https://www.youtube.com/watch?v=F_ZNIXPcuig" target="_blank">
+          antifreeze - 백예린
+        </a>
+        <br>
       </div>
       <div class="btn-group">
         <a href="portfolio.html#html-projects" class="btn">작품 보기</a>
@@ -68,7 +73,7 @@ int main() {
 }
       </code></pre>
       <div class="preview-box">
-        <div style="background-color: #58a6ff; padding: 20px; border-radius: 10px; color: white; text-align: center;">
+        <div style="background-color: #f6e070; padding: 20px; border-radius: 10px; color: #3AB0DB; text-align: center;">
           CSS로 스타일링한 박스
         </div>
       </div>
@@ -100,6 +105,7 @@ document.querySelector('button')
   </main>
 </body>
 </html>
+
 
 
 
