--- a/code.html
+++ b/code.html
@@ -73,9 +73,8 @@ int main() {
 }
       </code></pre>
       <div class="preview-box">
-        <div style="background-color: #f6e070; padding: 20px; border-radius: 10px; color: #3AB0DB; text-align: center;">
+        <div style="background-color: #58a6ff; padding: 20px; border-radius: 10px; color: white; text-align: center;">
           CSS로 스타일링한 박스
-        </div>
       </div>
       <div class="btn-group">
         <a href="portfolio.html#css-projects" class="btn">디자인 작품 보기</a>
@@ -105,6 +104,7 @@ document.querySelector('button')
   </main>
 </body>
 </html>
+
 
 
 
