--- a/code.html
+++ b/code.html
@@ -103,7 +103,11 @@ document.querySelector('button')
     </section>
   </main>
 </body>
+<footer>
+  <p>© 2025 김예은 | IT학부</p>
+</footer>
 </html>
+
 
 
 
