--- a/code.html
+++ b/code.html
@@ -33,7 +33,7 @@ int main() {
     return 0;
 }
       </code></pre>
-      <p class="output-example">출력 : <span>Hello, World!</span></p>
+      <p class="output-example" style="color : #2F3A3D">출력 : <span>Hello, World!</span></p>
       <div class="btn-group">
         <a href="portfolio.html#c-projects" class="btn">완성 프로젝트 보기</a>
       </div>
@@ -47,14 +47,14 @@ int main() {
 &lt;p&gt;이것은 단락입니다.&lt;/p&gt;
 &lt;a href="#"&gt;antifreeze - 백예린&lt;/a&gt;
       </code></pre>
-      <div class="preview-box">
+      <div class="preview-box" style="color : #2F3A3D">
         <h3>안녕하세요</h3>
         <p>이것은 단락입니다.</p>
         <a href="https://www.youtube.com/watch?v=F_ZNIXPcuig" target="_blank">
           antifreeze - 백예린
         </a>
-        <br>
       </div>
+      <br>
       <div class="btn-group">
         <a href="portfolio.html#html-projects" class="btn">작품 보기</a>
         <a href="playground.html#html-editor" class="btn btn-primary">직접 해보기</a>
@@ -73,13 +73,13 @@ int main() {
 }
       </code></pre>
       <div class="preview-box">
-        <div style="background-color: #58a6ff; padding: 20px; border-radius: 10px; color: white; text-align: center;">
+        <div style="background-color: #F1F0E8; padding: 20px; border-radius: 10px; color: #0d1117; text-align: center;">
           CSS로 스타일링한 박스
-      </div>
-      <div class="btn-group">
-        <a href="portfolio.html#css-projects" class="btn">디자인 작품 보기</a>
-        <a href="playground.html#css-editor" class="btn btn-primary">직접 꾸며보기</a>
-      </div>
+        </div>
+        <div class="btn-group">
+          <a href="portfolio.html#css-projects" class="btn">디자인 작품 보기</a>
+          <a href="playground.html#css-editor" class="btn btn-primary">직접 꾸며보기</a>
+        </div>
     </section>
 
     <!-- JavaScript 소개 -->
@@ -104,8 +104,8 @@ document.querySelector('button')
   </main>
 </body>
 <footer>
-  <p>© 2025 김예은 | IT학부</p>
-</footer>
+    <p>© 2025 김예은 | IT학부</p>
+  </footer>
 </html>
 
 
