--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <h1>김예은</h1>
     <p>IT학부 | 웹프로그래밍 중간/기말고사
     </p>
-    <nav>
+    <nav class="main-nav">
       <!-- 소개 -->
       <a href="index.html">Home</a>
       <!-- 미리보기 코드 -->
       <a href="code.html">Code</a>
-      <!-- 내가 그동안 공부한 코드 모음집(?) -->
+      <!-- 내가 만든 프로젝트 모음집(?) -->
       <a href="portfolio.html">Portfolio</a>
       <!-- 체험판 -->
       <a href="playground.html">Playground</a>
@@ -31,8 +31,11 @@
         직접 실행하고 체험할 수 있도록 만든 포트폴리오입니다.<br>
         단순히 결과를 보여주는 것이 아니라, <b>직접 눌러보고 느끼는 코드</b>를 목표로 했습니다.
       </p>
-      <a href="code.html" class="btn">체험 시작 ▶</a>
+      <a href="code.html" class="btn">체험 시작</a>
     </section>
   </main>
+  <footer>
+      <p>@ 2025 김예은 | IT학부</p>
+  </footer>
 </body>
 </html>
