playground 체험하기 페이지 추가 및 스타일 개선

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <meta charset="UTF-8">
   <title>Portfolio | 김예은</title>
   <link rel="stylesheet" href="style.css">
-  <script defer src="script.js"></script>
+  <script src="script.js"></script>
 </head>
 
 <body>
@@ -402,7 +401,7 @@ function addTodo() {
 
     <section class="cta-section">
       <h2>직접 코드를 작성해보고 싶으신가요?</h2>
-      <p>플레이그라운드에서 자유롭게 코딩해보세요!</p>
+      <p>플레이그라운드에서 자유롭게 코딩해보세요</p>
       <a href="playground.html" class="btn btn-large">Playground로 가기</a>
     </section>
   </main>
@@ -410,5 +409,4 @@ function addTodo() {
     <p>© 2025 김예은 | IT학부</p>
   </footer>
 </body>
-
 </html>
