--- a/portfolio.html
+++ b/portfolio.html
@@ -285,7 +285,7 @@ function press(btn) {
             • localStorage로 최고 기록 저장<br>
             • 5×5 그리드 레이아웃</p>
         </div>
-        <a href="https://github.com/kimyeeun0614/2025.webprogramingtest" target="_blank" class="btn">게임 플레이하기 →</a>
+        <a href="https://webprogramming-4.github.io/number.game/" target="_blank" class="btn">게임 플레이하기 →</a>
       </article>
 
       <article class="project-card">
@@ -411,3 +411,4 @@ function addTodo() {
 </body>
 
 </html>
+
